--- a/config/bhf/admin.yml
+++ b/config/bhf/admin.yml
@@ -1,6 +1,4 @@
 pages:
-
-
 - settings:
   - users:
       table:
@@ -16,4 +14,9 @@ pages:
         display: [id, name, updated_at, created_at]
 
   - statics:
-            
+
+  # - accounts:
+  #     form:
+  #       display: [id, supplier, updated_at, created_at]
+  #
+  # - suppliers:
